--- a/.github/workflows/ci_debug_build.yml
+++ b/.github/workflows/ci_debug_build.yml
@@ -22,7 +22,7 @@ jobs:
     - run: python -m pip install meson
     - run: python -m pip install -e .[tests]
     - run: sudo apt install -yq --no-install-recommends ninja-build gfortran liblapack-dev libscalapack-mpi-dev libmumps-dev libopenmpi-dev openmpi-bin
-    - run: meson setup build -Dsystem_blas=true --buildtype debug
+    - run: meson setup build --buildtype debug
       env:
         FC: gfortran
     - run: pytest -r a -v
