--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -5,10 +5,14 @@ on:
     paths:
     - "**/*.f90"
     - "**/*.F90"
+    - "**/meson.build"
+    - "**/CMakeLists.txt"
   pull_request:
     paths:
     - "**/*.f90"
     - "**/*.F90"
+    - "**/meson.build"
+    - "**/CMakeLists.txt"
 
 jobs:
 
