disable Mac CI till laptop debugging. Make Fortran emit 77 if input grid missing

--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -40,6 +40,8 @@ jobs:
         path: build/meson-logs/testlog.txt
 
   macosCmake:
+    # need to debug on real Mac, for some reason python packages not recognized
+    if: false
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v1
