zenodo: update urls

--- a/meson.build
+++ b/meson.build
@@ -86,26 +86,26 @@ magcalc = executable('magcalc.bin', 'magcalc.f90',
 
 zenodo = {
   '2d_fang': {
-    'url': 'https://zenodo.org/record/3464571/files/zenodo2d_fang.zip?download=1',
+    'url': 'https://zenodo.org/record/3477385/files/zenodo2d_fang.zip?download=1',
     'md5': '57d72fd0005247c8eedf122ac4670ad0',
     'dir': meson.source_root() / 'tests/data/zenodo2d_fang',
     'zip': meson.source_root() / 'tests/data/zenodo2d_fang.zip',
     'exe': gemini_fang_exe},
   '2d_glow': {
-    'url': 'https://zenodo.org/record/2520780/files/zenodo2d_glow.zip?download=1',
-    'md5': 'c5bbbbff3bdde85b6d7e9470bc3751a2',
+    'url': 'https://zenodo.org/record/3477385/files/zenodo2d_glow.zip?download=1',
+    'md5': '557bc6a91d8bf3464abdc5c8784f3042',
     'dir': meson.source_root() / 'tests/data/zenodo2d_glow',
     'zip': meson.source_root() / 'tests/data/zenodo2d_glow.zip',
     'exe': gemini_glow_exe},
   '3d_fang': {
-    'url': 'https://zenodo.org/record/2520920/files/zenodo3d.zip?download=1',
-    'md5': '225853d43937a70c9ef6726f90666645',
-    'dir': meson.source_root() / 'tests/data/zenodo3d',
-    'zip': meson.source_root() / 'tests/data/zenodo3d.zip',
+    'url': 'https://zenodo.org/record/3477330/files/zenodo3d_fang.zip?download=1',
+    'md5': 'cf73d6eb166369c522da7a371492a1ce',
+    'dir': meson.source_root() / 'tests/data/zenodo3d_fang',
+    'zip': meson.source_root() / 'tests/data/zenodo3d_fang.zip',
     'exe': gemini_fang_exe},
   '3d_glow': {
-     'url': 'https://zenodo.org/record/2520920/files/zenodo3d_glow.zip?download=1',
-     'md5': '2c54bfde8aff0fb72d61115f04c361a7',
+     'url': 'https://zenodo.org/record/3477330/files/zenodo3d_glow.zip?download=1',
+     'md5': '3528946525295cc8271aa41bc262d7f1',
      'dir': meson.source_root() / 'tests/data/zenodo3d_glow',
      'zip': meson.source_root() / 'tests/data/zenodo3d_glow.zip',
      'exe': gemini_glow_exe},
