--- a/ionization/CMakeLists.txt
+++ b/ionization/CMakeLists.txt
@@ -8,7 +8,7 @@ if(useglow)
   add_library(ionization_glow ionization.f90 glow_run.F90)
   target_link_libraries(ionization_glow PRIVATE cglow const neutral grid timeutils mpimod MPI::MPI_Fortran)
   set_target_properties(ionization_glow PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
-  target_include_directories(ionization_glow PRIVATE ${ncarglow_BINARY_DIR}/src)
+  target_include_directories(ionization_glow PRIVATE ${ncarglow_BINARY_DIR})
   # double quotes needed in next line since it's injects directly into Fortran code
   target_compile_definitions(ionization_glow PRIVATE DATADIR="${CMAKE_BINARY_DIR}/_deps/ncarglow-src/data/")
   # this is a workaround for GCC 8.3 needing to NOT build these targets in parallel
