--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -26,7 +26,7 @@ jobs:
     - run: sudo apt install -yq --no-install-recommends ninja-build gfortran liblapack-dev libscalapack-mpi-dev libmumps-dev libopenmpi-dev openmpi-bin
     - name: Setup CMake
       run: |
-        python -m pip install cmakeutils
+        pip install cmakeutils
         cmake_setup ${cmake_version} --prefix ${HOME}/.local
         ${HOME}/.local/cmake-${cmake_version}-Linux-x86_64/bin/cmake -B build
       env:
