meson: making self-tests more robust

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -6,5 +6,6 @@ option('LAPACK_ROOT', type : 'string', description : 'root directory of LAPACK')
 option('SCALAPACK_ROOT', type : 'string', description : 'root directory of SCALAPACK')
 option('MUMPS_ROOT', type : 'string', description : 'root directory of MUMPS')
 option('MPI_ROOT', type : 'string', description : 'root directory of MPI')
+option('CI', type: 'boolean', value: false, description : 'running on CI, do not run shaky tests', yield: true)
 option('NP', type: 'string', description: 'manually set number of MPI processes')
-option('system_blas', type: 'boolean', value: true, description: 'use system libraries')
+option('system_blas', type: 'boolean', value: false, description: 'use system libraries')
