--- a/tests/meson.build
+++ b/tests/meson.build
@@ -9,7 +9,8 @@ test_mumps_exe = executable('test_mumps', 'test_mumps.F90',
   dependencies: [mumps, mpi],
   fortran_args: real_bits)
 test('MUMPS', mpiexec,
-  args: ['-np', '1', test_mumps_exe],
+  args: ['-np', '2', test_mumps_exe],
   workdir: meson.current_source_dir(),
-  timeout: 5,
+  timeout: 15,
+  is_parallel: false,
   suite: 'unit')
