--- a/ionization/meson.build
+++ b/ionization/meson.build
@@ -1,4 +1,5 @@
-ionization_fang = library('ionization', 'ionization.f90', 'glow_dummy.f90',
+ionization_fang = library('ionization',
+  sources: ['ionization.f90', 'glow_dummy.f90'],
   link_with: [const, neutral, grid, timeutils, mpimod],
   dependencies : mpi)
 
@@ -14,7 +15,8 @@ glow_lib = glow_proj.get_variable('cglow')
 
 data_dir = 'subprojects/glow/data/' # need trailing slash
 
-ionization_glow = library('ionization_glow', 'ionization.f90', 'glow_run.F90',
+ionization_glow = library('ionization_glow',
+  sources: ['ionization.f90', 'glow_run.F90'],
   link_with: [glow_lib, const, neutral, grid, timeutils, mpimod],
   dependencies : mpi,
   fortran_args: '-DDATADIR="'+data_dir+'"')
