--- a/ionization/meson.build
+++ b/ionization/meson.build
@@ -1,6 +1,12 @@
+fang = library('ionize_fang', 'fang.f90',
+  link_with: const)
+
+test_fang2008 = executable('test_fang2008', 'test_fang2008.f90',
+  link_with: [fang, msis])
+
 ionization_fang = library('ionization',
   sources: ['ionization.f90', 'glow_dummy.f90'],
-  link_with: [const, neutral, grid, timeutils, mpimod],
+  link_with: [const, neutral, grid, timeutils, mpimod, fang],
   dependencies : mpi)
 
 precipBCs = library('precipBCs', 'boundary_conditions/precipBCs_mod.f90',
@@ -17,6 +23,6 @@ data_dir = 'subprojects/glow/data/' # need trailing slash
 
 ionization_glow = library('ionization_glow',
   sources: ['ionization.f90', 'glow_run.F90'],
-  link_with: [glow_lib, const, neutral, grid, timeutils, mpimod],
+  link_with: [glow_lib, const, neutral, grid, timeutils, mpimod, fang],
   dependencies : mpi,
   fortran_args: '-DDATADIR="'+data_dir+'"')
