--- a/ionization/meson.build
+++ b/ionization/meson.build
@@ -1,11 +1,11 @@
 fang = library('ionize_fang', 'fang.f90',
   link_with: const)
 
-test_fang2008_exe = executable('test_fang2008', 'test_fang2008.f90',
+test_fang_exe = executable('test_fang', 'test_fang.f90',
   link_with: [fang, msis])
 
-test('Fang2008', python,
-  args: ['test_fang2008.py', test_fang2008_exe],
+test('Fang', python,
+  args: ['test_fang.py', test_fang_exe],
   timeout: 10,
   workdir: meson.current_source_dir(),
   suite: 'unit')
