glow: syntax/lint

--- a/ionization/CMakeLists.txt
+++ b/ionization/CMakeLists.txt
@@ -29,7 +29,7 @@ if(useglow)
   target_link_libraries(ionization_glow PRIVATE cglow const neutral grid timeutils fang mpimod MPI::MPI_Fortran)
   set_target_properties(ionization_glow PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
   target_include_directories(ionization_glow PRIVATE ${ncarglow_BINARY_DIR})
-  # double quotes needed in next line since it's injects directly into Fortran code
+  # double quotes needed in next line since it injects directly into Fortran code
   target_compile_definitions(ionization_glow PRIVATE DATADIR="${CMAKE_BINARY_DIR}/_deps/ncarglow-src/data/")
   # this is a workaround for GCC 8.3 needing to NOT build these targets in parallel
   add_dependencies(ionization_glow ionization)
