--- a/meson_options.txt
+++ b/meson_options.txt
@@ -5,4 +5,4 @@ option('LAPACK_ROOT', type : 'string', description : 'root directory of LAPACK')
 option('SCALAPACK_ROOT', type : 'string', description : 'root directory of SCALAPACK')
 option('MUMPS_ROOT', type : 'string', description : 'root directory of MUMPS')
 option('MPI_ROOT', type : 'string', description : 'root directory of MPI')
-option('system_blas', type: 'boolean', value: false, description: 'use system libraries')
+option('system_blas', type: 'boolean', value: true, description: 'use system libraries')
